--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT = 1000
+DB_URL = mongodb+srv://AyaanHalai:Ayaan123@bookstore.yh8hmjt.mongodb.net/
+DB_URL_LOCAL = mongodb://localhost:27017/bookstore 
