--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dcryptjs": "^1.0.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10"
   }
